<resources>
    <string name="app_name">App Fruits</string>
    <string name="title_activity_history">Lịch sử</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Đăng xuất</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="fruitsshoppingT2004E">T200k4E</string>
    <string name="already_registered">tài khoản đã được đăng ký  </string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="phone">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="user_name">Tên tài khoản</string>
    <string name="name">Tên người dùng</string>
    <string name="menu_home">Trang chủ</string>
    <string name="categories">Category</string>
    <string name="products">Product</string>
    <string name="shoppingCart">Giỏ hàng</string>


    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="password">Mật khẩu</string>
    <string name="don_t_have_an_account"> bạn chưa có tài khoản? </string>
    <string name="my_fruit">Fruits </string>
    <string name="hello_explore_your_dream_fruit">Hello Explore Your Dream Fruit</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="see_more">Xem Thêm</string>
    <string name="open_menu">Open Menu</string>
    <string name="close_menu">Close Menu</string>
    <string name="app_slogan">Welcome to android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_contact">List Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="list_song">List Song</string>
    <string name="add_song">add_song</string>
    <string name="about_us">About Us</string>
    <string name="policy">Policy</string>
    <string name="Add_song">AddSong</string>
    <string name="check_out">Check Out</string>
    <string name="note">Note</string>
</resources>