<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CheckOutFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAddress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/address"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/phone"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNote"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/note"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPhone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_check_out"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="Xác Nhận"
        android:background="@color/red"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutNote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_redirect"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="Tiếp tục mua hàng"
        android:background="@color/red"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/button_check_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>