<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">
    <ImageView
        android:id="@+id/imgRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/forground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/top_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lobster"
                    android:text="Fruits "
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="45dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="20dp">

                <LinearLayout
                    android:id="@+id/register_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtUserName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#CCCCCC"
                        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                        android:drawablePadding="13dp"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:textColor="#ffffff"
                        android:textColorHint="@color/white" />

                    <TextView
                        android:id="@+id/UserNameAlert"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#B71C1C"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/register_user_name"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#CCCCCC"
                        android:drawableLeft="@drawable/ic_baseline_person_24"
                        android:drawablePadding="13dp"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:textColor="#ffffff"
                        android:textColorHint="@color/white" />

                    <TextView
                        android:id="@+id/NameAlert"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#B71C1C"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_name"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:backgroundTint="#CCCCCC"
                        android:drawableLeft="@drawable/ic_baseline_phone_enabled_24"
                        android:drawablePadding="13dp"
                        android:hint="@string/phone"
                        android:minHeight="48dp"
                        android:textColor="#ffffff"
                        android:textColorHint="@color/white" />

                    <TextView
                        android:id="@+id/PhoneAlert"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#B71C1C"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_phone"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#CCCCCC"
                        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
                        android:drawablePadding="13dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:textColor="#ffffff"
                        android:textColorHint="@color/white" />

                    <TextView
                        android:id="@+id/PasswordAlert"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#B71C1C"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_password"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:backgroundTint="#CCCCCC"
                        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
                        android:drawablePadding="13dp"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:textColor="#ffffff"
                        android:textColorHint="@color/white" />

                    <TextView
                        android:id="@+id/PasswordConfirmAlert"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#B71C1C"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_confirm_password"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#CCCCCC"
                        android:drawableLeft="@drawable/ic_baseline_location_on_24"
                        android:drawablePadding="13dp"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:textColor="#ffffff"
                        android:textColorHint="@color/white" />

                    <TextView
                        android:id="@+id/AddressAlert"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#B71C1C"
                        android:textSize="15sp" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_bg_design"
                    android:onClick="mainActivity"
                    android:padding="14dp"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_15dp"
                        android:layout_marginBottom="18dp"
                        android:text="@string/already_registered"
                        android:textAlignment="center"
                        android:textColor="#FBFBFB"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textSingIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="@dimen/margin_15dp"
                        android:onClick="Login"
                        android:text="@string/sign_in"
                        android:textAlignment="center"
                        android:textColor="@color/red"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
